Fix toc and heading behind header

--- a/_sass/hamilton/layout.scss
+++ b/_sass/hamilton/layout.scss
@@ -20,6 +20,7 @@
   @include media-query($on-small) {
     border-top: none;
     display: flex;
+    position: -webkit-sticky;
     position: sticky;
     top: 0;
     left: 0;
@@ -201,9 +202,11 @@
  */
 .site-sidebar {
   padding: $spacing-unit;
+  position: -webkit-sticky;
   position: sticky;
-  top: 0;
+  top: $header-height;
   align-self: start;
+  z-index: 10;
   @include relative-font-size(0.8);
 
   @include media-query($on-medium) {
@@ -597,6 +600,12 @@ ul.post-categories {
 
     p, blockquote, pre, figure, iframe, %vertical-rhythm {
       margin-bottom: $spacing-unit / 3;
+    }
+  }
+  // Make header not cover the heading elements when anchor links are used.
+  [id] {
+    @include media-query($on-small) {
+      scroll-margin-top: $header-height;
     }
   }
 }
