--- a/_sass/hamilton/variables.scss
+++ b/_sass/hamilton/variables.scss
@@ -10,6 +10,7 @@ $base-line-height:  1.5 !default;
 // Layouts
 $spacing-unit:      2rem !default;
 $content-width:     1300px !default;
+$header-height:     $base-font-size * 3;
 
 $on-small:          600px !default;
 $on-medium:         900px !default;
